# rapier3d

./: .gitignore  .gitmodules  .valgrindrc  CMakeLists.txt  README.txt  glfw-init.supp  glfw-window.supp  notes.txt
assets/models/: monki.blend  monki.glb
assets/models/79571/: 79571.dae  79571.skp
assets/models/computer/: 78023.dae  78023.mtl  78023.skp
assets/shaders/: axis.vert  computer.frag  computer.vert
cmake/: x86_64-linux.cmake  x86_64-win.cmake
game/: CMakeLists.txt
game/assets/models/79571/: 79571.blend  79571.c4d  79571.fbx  79571.max  79571.mtl
game/assets/models/computer/: 78023.c4d  78023.fbx
game/assets/models/sword/: SwordMinecraft.mtl
game/assets/shaders/: axis.frag  computer.frag  simple.frag  simple.vert
game/src/: demo.cpp  main.cpp
rapier3d/: CMakeLists.txt
rapier3d-framework/: CMakeLists.txt
rapier3d-framework/include/rapier3d/window/: InputProcessor.hpp  Window.hpp
rapier3d-framework/include/rapier3d/window/framework/: WindowFramework.hpp
rapier3d-framework/src/: InputProcessor.cpp  Window.cpp  WindowFramework.cpp
rapier3d-gl/: CMakeLists.txt
rapier3d-gl/include/rapier3d/render/gl/: Buffer.hpp  Buffer.inl  GraphicLibrary.hpp  Shader.hpp  Texture.hpp  Vertex.hpp  VertexArray.hpp
rapier3d-gl/src/: Debug.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
rapier3d/include/rapier3d/render/: RenderQueue.hpp  TextureLoader.hpp
rapier3d/include/rapier3d/render/model/: Obj.hpp
rapier3d/include/rapier3d/scene/: ViewCamera.hpp
rapier3d/src/render/: TextureLoader.cpp
rapier3d/src/render/model/: GLtf.cpp  Obj.cpp
rapier3d/src/scene/: ViewCamera.cpp
src/: RenderDriver.cpp  RenderDriver.hpp  main.cpp
src/render/: RenderQueue.hpp
src/render/gl/: Buffer.hpp  Buffer.inl  Debug.cpp  GraphicLibrary.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp
src/render/model/: GLtf.cpp  GLtf.hpp  Obj.cpp  Obj.hpp
src/scene/: ViewCamera.cpp  ViewCamera.hpp
src/window/: InputProcessor.hpp  Window.cpp  Window.hpp
src/window/framework/: WindowFramework.hpp
